# stackchan-llm-system-api

./: main.py  pyproject.toml
static/css/: style.css
static/js/: websocket.js
templates/: index.html
utils/: prompt_prepare.py  save_load_json.py
